<resources>
    <string name="app_name">ProjectWIFE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Project WIFE</string>
    <string name="nav_header_subtitle">version alpha 0.5.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_main_text_label">wAIfuChat</string>
    <string name="username_login_text_label">UserName or Mail: </string>
    <string name="pword_text_label">Password: </string>
    <string name="login_button_label">Log In</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="about_button_label">About</string>
    <string name="username_sign_text_label">UserName: </string>
    <string name="mail_sign_text_label">Mail: </string>
    <string name="pword_repeat_sign_text_label">Confirm Password: </string>

    <string name="coming_soon">Coming Soon…</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About</string>
    <string name="menu_configs">Configuration</string>

    <string name="configs_user_name_label">Your name:</string>
    <string name="config_user_bday_label">your birthday:</string>
    <string name="config_bday_datepicker_label">Select a date for birthday:</string>
    <string name="config_user_gender_label">your gender:</string>
    <string name="config_your_so_data">Significant Other Data:</string>
    <string name="configs_so_name_label">Your S/O name:</string>
    <string name="config_so_weight_label">S/O Weight:</string>
    <string name="configs_so_height_label">S/O height:</string>
    <string name="config_so_gender_label">S/O gender:</string>
    <string name="config_so_age_label">S/O age:</string>
    <string name="config_so_bday_label">S/O Birthday:</string>
    <string name="config_so_3_sizes_label">S/O Three sizes</string>
    <string name="config_so_bust_size_label">S/O bust size:</string>
    <string name="config_so_waist_size_label">S/O waist size:</string>
    <string name="config_so_hip_size_label">S/O hip size:</string>
    <string name="config_so_personality_label">Select S/O type:</string>
    <string name="config_so_sanguine_type_label">S/O Sanguine type:</string>
    <string name="config_so_alias_label">Give a Nickname to your S/O:</string>
    <string name="config_so_user_alias_label">How would your S/O like to call you:</string>
    <string name="upload_data">Sign your Marriage</string>
    <string name="data_uploaded">HAPPILY MARRIED</string>
    <string name="upload_image_label">Pic of Your Waifu</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="personalities">
        <item>Tsundere</item>
        <item>Yandere</item>
        <item>Deredere</item>
        <item>Himedere</item>
        <item>Dandere</item>
    </string-array>
    <string-array name="sanguine_type">
        <item>A+</item>
        <item>O+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>

    <string name="incomplete_form_label">The form is incomplete</string>
    <string name="invalid_chars_label">The form has a invalid character</string>
    <string name="special_user_welcome">Welcome back. Gabriel, Your wife is waiting for you..</string>
    <string name="forbidden_name_label">You can use that name.. sorry</string>
    <string name="complete_form_label">Welcome</string>

    <string name="about_tile">About This app</string>
    <string name="about_abstract">Hi I\'m Tenma Fran the developer behind this app\, while I\'m learning to make useful apps and growth my seniority\, i think in develop this idea.
        I have so much planned for this app\. \n My goal is create an app for those who want to talk with a waifu or husbando\,like me!
        A chat\-bot is perfect for this\. I\'ll try to use a AI and data bases for better experience\.</string>
    <string name="about_rules_button_label">Rules</string>
    <string name="abouy_how_to_use_button_label">How to use</string>
    <string name="about_change_log_button_label">Change log</string>
    <string name="about_who_is_default_wiaifu_button_label">Default Waifu?? Who is her?</string>
    <string name="about_fq_button_lavel">FAQ</string>

    <!-- kumi fragment -->
    <string name="kumi_history">She is Kumiko Akira\, a young witch who is training to be one of the most powerful witches.
    \nShe is optimist and happy\, talented but lazy and carefree\, </string>

    <!-- home fragment -->
    <string name="send_message_button_label">Send…</string>
    <string name="message_text_input_hint">Write a message…</string>
    <string-array name="default_greatings">
        <item>Hello!</item>
        <item>HI</item>
        <item>Hey There</item>
        <item>Hi, Master</item>
        <item>Great to see you</item>
        <item>I miss you</item>
        <item>Welcome Back</item>
        <item>Hooray you came back</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>