<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tenmafrank.projectwife.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tenmafrank.projectwife.ui.about.AboutFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_gallery_to_kumiFragment"
            app:destination="@id/kumiFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_configs"
        android:name="com.tenmafrank.projectwife.ui.configs.ConfigsFragment"
        android:label="@string/menu_configs"
        tools:layout="@layout/fragment_configs" />
    <fragment
        android:id="@+id/kumiFragment"
        android:name="com.tenmafrank.projectwife.ui.about.KumiFragment"
        android:label="fragment_kumi"
        tools:layout="@layout/fragment_kumi" />
</navigation>