<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_main_text_label"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/fab_margin"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:id="@+id/userNameTextField"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:hint="@string/username_login_text_label"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/appNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameInputTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:id="@+id/pWordTextField"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:hint="@string/pword_text_label"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/userNameTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pWordInputTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/login_button_label"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/pWordTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_label"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/logInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/about_button_label"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>