<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.slideshow.ConfigsFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:id="@+id/userNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/configs_user_name_label"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameInputTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:id="@+id/userBdayTextField"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:hint="@string/config_user_bday_label"
            android:layout_margin="@dimen/fab_margin"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_action_calendar"
            app:layout_constraintTop_toBottomOf="@id/userNameTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/userGenderTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userBdayInputTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/userGenderTextField"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@id/userNameTextField"
            app:layout_constraintStart_toEndOf="@id/userBdayTextField"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="@string/config_user_gender_label"
                app:simpleItems="@array/genders"
                />

        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/oText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_your_so_data"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/fab_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userBdayTextField"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>